--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,12 +1,12 @@
 name: minecraft-launcher-ot
-title: Minecraft Launcher
+title: Minecraft Java
 version: '21'
 summary: Other Linux Minecraft Launcher
 description: |
         "Other Linux version of the Minecraft Launcher for Minecraft: Java Edition"
 confinement: strict
 base: core18
-icon: snap/gui/minecraft-launcher-ot.svg
+icon: /snap
 
 parts:
   minecraft-launcher:
