--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,16 +1,16 @@
-name: minecraft-launcher-ot
-title: Minecraft Launcher
+name: minecraft-java-launcher
+title: Minecraft
 version: '21'
-summary: Other Linux Minecraft Launcher
+summary: Minecraft Launcher
 description: |
-        "Other Linux version of the Minecraft Launcher for Minecraft: Java Edition"
-confinement: strict
+        "Minecraft Launcher for Minecraft: Java Edition"
+confinement: devmode
 base: core18
-icon: snap/gui/minecraft-launcher-ot.svg
 
 parts:
   minecraft-launcher:
-    plugin: dump
+    plugin: python
+    python-version: python2
     source: https://launcher.mojang.com/download/Minecraft.tar.gz
     build-packages:
       - ca-certificates
@@ -22,17 +22,4 @@ parts:
 
 apps:
   minecraft-launcher-ot:
-    command: minecraft-launcher
-    environment:
-      JAVA_HOME: $SNAP/usr/lib/jvm/default-java
-      PATH: $JAVA_HOME/jre/bin:$PATH
-    extensions: [gnome-3-34]
-    plugs:
-      - gsettings
-      - home
-      - network
-      - browser-support
-      - audio-playback
-      - opengl
-      - x11
-      - wayland
+    command: minecraft
